[package]
name = "radio-message"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "console"
path = "src/console/main.rs"

# [[bin]]
# name = "visual"
# path = "src/visual/main.rs"

[dependencies]
macroquad = "0.3"
tokio = { version = "1.17", features = ["full"] }
rand = "0.8"
rand_distr = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
euclid = "0.22.6"
envmnt = "0.9.1"
